[project]
name = "email-rl-env"
version = "0.1.0"
description = "Smart Email Prioritization RL Environment"
authors = [
    { name = "themaitreyi" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "gym",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_module = "env"
env_class = "EmailEnv"